--- a/Entrevoisins/app/src/main/res/layout/activity_neighbour_profil.xml
+++ b/Entrevoisins/app/src/main/res/layout/activity_neighbour_profil.xml
@@ -51,7 +51,6 @@
                 android:tint="@color/white"
                 />
 
-
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
@@ -78,7 +77,7 @@
         android:layout_margin="12dp"
         app:cardBackgroundColor="@color/white"
         android:theme="@style/Base.CardView"
-        app:cardCornerRadius="8dp"
+        app:cardCornerRadius="12dp"
         app:layout_constraintTop_toBottomOf="@+id/appbar"
         tools:layout_editor_absoluteX="16dp">
 
@@ -177,7 +176,7 @@
                 android:layout_margin="12dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                app:cardCornerRadius="8dp"
+                app:cardCornerRadius="12dp"
                 android:theme="@style/Widget.MaterialComponents.CardView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -203,9 +202,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/neighbour_info"
-                        android:layout_margin="8dp"
-                        android:text="@string/neighbour_info_text"
-                        android:textSize="16sp" />
+                        android:layout_margin="4dp"
+                        android:text="Bonjour !Je souhaiterais faire de la marche nordique, Pas initiée, je cherche une ou plusieurs personnes susceptibles de m'accompagner !J'aime les jeux de cartes tels la belote et le tarot.."
+                        android:textSize="14sp" />
                 </RelativeLayout>
     </android.support.v7.widget.CardView>
 
